--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,9 @@
 		
 		<spark.version>3.1.1</spark.version>
 		<jaxb.version>2.3.2</jaxb.version>
-		
+
+		<log4j.version>2.17.0</log4j.version>
+
     	<tomcat.version>9.0.46</tomcat.version>
     	
     	<maven.compiler.initial.memory>1024M</maven.compiler.initial.memory>
@@ -209,13 +211,13 @@
 			<dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
-                <version>2.16.0</version>
+                <version>${log4j.version}</version>
             </dependency>
             
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
-                <version>2.16.0</version>
+				<version>${log4j.version}</version>
             </dependency>
             
             <dependency>
