--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,11 @@
 		<spark.version>3.1.1</spark.version>
 		<jaxb.version>2.3.2</jaxb.version>
 
-		<log4j.version>2.17.0</log4j.version>
+		<log4j.version>2.17.1</log4j.version>
+		<h2.database.version>2.0.206</h2.database.version>
 
-    	<tomcat.version>9.0.46</tomcat.version>
+
+    	<tomcat.version>9.0.56</tomcat.version>
     	
     	<maven.compiler.initial.memory>1024M</maven.compiler.initial.memory>
         <maven.compiler.max.memory>2048M</maven.compiler.max.memory>
@@ -198,7 +200,7 @@
             <dependency>
 			    <groupId>com.h2database</groupId>
 			    <artifactId>h2</artifactId>
-			    <version>2.0.202</version>
+			    <version>${h2.database.version}</version>
 			</dependency>
 
 			<dependency>
