--- a/excel-integration/pom.xml
+++ b/excel-integration/pom.xml
@@ -13,6 +13,10 @@
 	<artifactId>excel-integration</artifactId>
 	<packaging>jar</packaging>
 	<name>excel-integration</name>
+
+	<properties>
+		<apache.poi.version>5.2.0</apache.poi.version>
+	</properties>
 	
 	<build>
 		<plugins>
@@ -45,13 +49,13 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>4.1.2</version>
+			<version>${apache.poi.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>4.1.2</version>
+			<version>${apache.poi.version}</version>
 		</dependency>
 
 		<dependency>
