Skipping the build of Java 17 - as we need to wait for Spark 3.3.0 - see https://issues.apache.org/jira/browse/SPARK-33772

--- a/.github/workflows/maven-windows.yml
+++ b/.github/workflows/maven-windows.yml
@@ -9,7 +9,8 @@ jobs:
     strategy:
       matrix:
         # Test Against LTS Java Versions
-        java: [ 8, 11, 17 ]
+        java: [ 8, 11 ]
+        #java: [ 8, 11, 17 ] - Waiting for Spark 3.3.0 - before we can do 17
 
     steps:
       - uses: actions/checkout@v2
