Pushed a simple echo servlet for debugging purposes.

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
    		<module>spark-examples</module>
 		<module>excel-integration</module>
 		<module>pdf-utilities</module>
+		<module>echo-servlet</module>
     </modules>
 
 
