--- a/spark-examples/push-down-predicates/pom.xml
+++ b/spark-examples/push-down-predicates/pom.xml
@@ -22,13 +22,13 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.12</artifactId>
-			<version>3.0.0</version>
+			<version>${spark.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.12</artifactId>
-			<version>3.0.0</version>
+			<version>${spark.version}</version>
 		</dependency>
 
 		<dependency>
