--- a/etcetera/pom.xml
+++ b/etcetera/pom.xml
@@ -24,6 +24,12 @@
 			<scope>test</scope>
 		</dependency>
 
+			<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${springboot.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
